--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 
 <body>
     <div class="container">
+
+        <header>
+            <img class="logo" src="img/lambda-black.png" alt="Lambda logo">
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+            <img class="headerImage" src="img/jumbo.jpg" alt="Lighted Highway in header">
+        </header>
    
         <section class="top-content">
             <div class="text-container">
