--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <section class="topHeader">
                 <img class="logo" src="img/lambda-black.png" alt="Lambda logo">
-                <nav class="tpHeader"> 
+                <nav> 
                     <a href="#">Home</a>
                     <a href="#">About</a>
                     <a href="#">Products</a>
