--- a/about.html
+++ b/about.html
@@ -15,6 +15,20 @@
 <body>
   <div class="container about-page">
 
+    <header>
+      <section class="topHeader">
+        <img class="logo" src="img/lambda-black.png" alt="Lambda logo">
+        <nav>
+          <a href="#">Home</a>
+          <a href="./about.html">About</a>
+          <a href="#">Products</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </nav>
+      </section>
+      <img class="headerImage" src="img/jumbo.jpg" alt="Lighted Highway in header">
+    </header>
+
     About
 
     Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate
