--- a/about.html
+++ b/about.html
@@ -29,54 +29,71 @@
       <img class="headerImage" src="img/jumbo.jpg" alt="Lighted Highway in header">
     </header>
 
-    About
+    <section>
+      <h1>About</h1>
+      <p>
+        Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
+        corporate
+        strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
+        world
+        view of disruptive innovation via workplace diversity and empowerment.
+      </p>
+    </section>
 
-    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate
-    strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world
-    view of disruptive innovation via workplace diversity and empowerment.
+    <section>
+      <img src="img/about-plan.png" alt="strategy">
 
+      <h2>Strategy</h2>
 
-    <img src="img/about-plan.png" alt="strategy">
+      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+        proposition.</p>
 
-    Strategy
+      <button>Learn More</button>
+    </section>
 
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+    <section>
+      <img src="img/about-working.png" alt="strategy">
 
-    Learn More
+      <h2> How We Work</h2>
 
+      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+        proposition.</p>
 
+      <button>Learn More</button>
+    </section>
 
-    <img src="img/about-working.png" alt="strategy">
+    <section>
+      <img src="img/about-office.png" alt="strategy">
 
-    How We Work
+      <h2> Places We Work</h2>
 
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+        proposition.</p>
 
-    Learn More
+      <button>Learn More</button>
+    </section>
 
+    <section>
+      <img src="img/about-meeting.png" alt="strategy">
 
+      <h2> Collaboration</h2>
 
-    <img src="img/about-office.png" alt="strategy">
+      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+        proposition.</p>
 
-    Places We Work
+      <button>Learn More</button>
+    </section>
 
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-
-    Learn More
-
-    <img src="img/about-meeting.png" alt="strategy">
-
-    Collaboration
-
-    Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
-
-    Learn More
-
-    Let's Work Together
-
-    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate
-    strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world
-    view of disruptive innovation via workplace diversity and empowerment.
+    <section>
+      <h2>Let's Work Together</h2>
+      <p>
+        Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
+        corporate
+        strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
+        world
+        view of disruptive innovation via workplace diversity and empowerment.
+      </p>
+    </section>
 
     <footer>
       <nav>
