--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <img class="headerImage" src="img/jumbo.jpg" alt="Lighted Highway in header">
     </header>
 
-    <section>
+    <section class="top-content-about">
       <h1>About</h1>
       <p>
         Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
