--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <img class="headerImage" src="img/jumbo.jpg" alt="Lighted Highway in header">
     </header>
 
-    <section class="top-content-about">
+    <section class="about-content">
       <h1>About</h1>
       <p>
         Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
@@ -40,48 +40,53 @@
       </p>
     </section>
 
-    <section>
-      <img src="img/about-plan.png" alt="strategy">
+    <section class="about-mid-content">
+      <div class="about-text-container">
+        <img src="img/about-plan.png" alt="strategy">
 
-      <h2>Strategy</h2>
+        <h2>Strategy</h2>
 
-      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-        proposition.</p>
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
 
-      <button>Learn More</button>
+        <button>Learn More</button>
+      </div>
+
+
+      <div class="about-text-container">
+        <img class="content" src="img/about-working.png" alt="strategy">
+
+        <h2 class="content"> How We Work</h2>
+
+        <p class="content">Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
+
+        <button class="content">Learn More</button>
+      </div>
     </section>
 
-    <section>
-      <img src="img/about-working.png" alt="strategy">
+    <section class="about-mid-content">
+      <div class="about-text-container">
+        <img src="img/about-office.png" alt="strategy">
 
-      <h2> How We Work</h2>
+        <h2> Places We Work</h2>
 
-      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-        proposition.</p>
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
 
-      <button>Learn More</button>
-    </section>
+        <button>Learn More</button>
+      </div>
 
-    <section>
-      <img src="img/about-office.png" alt="strategy">
+      <div class="about-text-container">
+        <img src="img/about-meeting.png" alt="strategy">
 
-      <h2> Places We Work</h2>
+        <h2> Collaboration</h2>
 
-      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-        proposition.</p>
+        <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
+          proposition.</p>
 
-      <button>Learn More</button>
-    </section>
-
-    <section>
-      <img src="img/about-meeting.png" alt="strategy">
-
-      <h2> Collaboration</h2>
-
-      <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-        proposition.</p>
-
-      <button>Learn More</button>
+        <button>Learn More</button>
+      </div>
     </section>
 
     <section>
