--- a/about.html
+++ b/about.html
@@ -19,14 +19,14 @@
       <section class="topHeader">
         <img class="logo" src="img/lambda-black.png" alt="Lambda logo">
         <nav>
-          <a href="#">Home</a>
+          <a href="./index.html">Home</a>
           <a href="./about.html">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
       </section>
-      <img class="headerImage" src="img/jumbo.jpg" alt="Lighted Highway in header">
+      <img class="headerImage" src="img/jumbo-about.png" alt="Lighted Highway in header">
     </header>
 
     <section class="about-content">
@@ -89,7 +89,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="about-bottom-content">
       <h2>Let's Work Together</h2>
       <p>
         Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
