made changes to header css for about page

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container about-page">
+  <div class="about-page">
 
     <header>
       <section class="topHeader">
@@ -26,7 +26,7 @@
           <a href="#">Contact</a>
         </nav>
       </section>
-      <img class="headerImage" src="img/jumbo-about.png" alt="Lighted Highway in header">
+      <img class="headerImage" src="img/jumbo-about.png" alt="View of the skyline">
     </header>
 
     <section class="about-content">
