made changes to css for the about section of the about page

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
           proposition.</p>
 
-        <button>Learn More</button>
+       <a href="#" class="learn-more">Learn More</a>
       </div>
 
 
